2012-09-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20030209-1.c:
	  Reduced array size, reenabled test.

2012-09-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglue.c (emitRegularMap, printIvalType, printIvalBitFields),
	* src/SDCCast.c (constExprValue): fixed bug #3560781 and related
	* support/regression/tests/bug3564649.c: ensure noreturn function
	  does not return

2012-09-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  More efficient stack pointer restoration.
	* support/regression/tests/bug3564649.c:
	  Regression test for bug #3564649.

2012-09-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiag/tests/tentdecl.c,
	* support/valdiag/tests/primtypes.c,
	* support/valdiag/tests/constantRange.c,
	* support/valdiag/tests/funcdec.c,
	* support/valdiag/tests/overflow.c,
	* support/valdiag/Makefile.in,
	* support/valdiag/valdiag.py: update to work with current SDCC version

2012-09-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCBBlock.c (iCode2eBBlock),
	* src/SDCCcflow.c (eBBSuccessors): fixed bug #3564649

2012-09-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as8051/i51mch.c,
	* sdas/as8051/i8051.h,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asxxxx.h: another small step towards ASxxxx v5

2012-09-12 Leland Morrison <enigmalee AT sourceforge.net>

	* sdas/asz80/z80.h, sdas/asz80/z80pst.c, sdas/asz80/z80mch.c,
	* sdas/asz80/z80adr.c: added support for undocument z80 instructions

2012-09-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.h,
	* src/SDCCicode.c (isOperandInBitSpace): new function
	* src/mcs51/ralloc.c (packRegsForOneuse): fixed bug #3564969

2012-09-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (computeType): fixed bug #3564104
	* support/regression/tests/bug3564104.c: reenabled test
